[project]
name = "ComfyUI"
version = "0.15.1"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=1.12.0",
    "agents>=1.4.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.8",
    "aiohttp-socks>=0.11.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "annotated-doc>=0.0.4",
    "argostranslate",
    "audioread>=3.1.0",
    "av>=14.2.0",
    "brotli>=1.2.0",
    "cffi>=2.0.0",
    "chardet>=6.0.0.post1",
    "chordparser>=0.4.2",
    "color-matcher>=0.6.0",
    "comfy-3d-viewers>=0.2.36",
    "comfy-aimdo>=0.2.1",
    "comfy-env>=0.2.18",
    "comfy-kitchen>=0.2.7",
    "comfyui-embedded-docs==0.4.1",
    "comfyui-frontend-package==1.39.19",
    "comfyui-workflow-templates==0.9.2",
    "comfyui-workflow-templates-core==0.3.150",
    "comfyui-workflow-templates-media-api==0.3.54",
    "comfyui-workflow-templates-media-image==0.3.91",
    "comfyui-workflow-templates-media-other==0.3.125",
    "comfyui-workflow-templates-media-video==0.3.51",
    "cryptography>=46.0.5",
    "cuda-bindings>=13.0.3",
    "cuda-pathfinder==1.2.2",
    "ddt>=1.7.2",
    "decorator>=5.2.1",
    "deepdiff>=8.6.1",
    "diffusers>=0.32.2",
    "dill>=0.4.1",
    "docutils>=0.22.4",
    "dpath>=2.2.0",
    "einops>=0.8.2",
    "fal-client>=0.13.1",
    "fastapi>=0.132.0",
    "ffmpeg-python>=0.2.0",
    "ffmpy>=1.0.0",
    "filelock==3.20.0",
    "fire>=0.7.0",
    "fitz>=0.0.1.dev2",
    "fsspec==2025.12.0",
    "gdown>=5.2.1",
    "gguf>=0.17.1",
    "gitdb>=4.0.12",
    "gitpython>=3.1.46",
    "glfw>=2.10.0",
    "google-genai>=1.64.0",
    "gradio>=5.40.0",
    "gradio-client>=1.11.0",
    "groovy>=0.1.2",
    "h2>=4.3.0",
    "hf-cli>=0.1",
    "hf-xet>=1.2.0",
    "hpack>=4.1.0",
    "huggingface-hub>=0.36.2",
    "hyperframe>=6.1.0",
    "imageio-ffmpeg>=0.6.0",
    "insightface>=0.7.3",
    "jsonpickle>=4.1.1",
    "jsonschema>=4.26.0",
    "jsonschema-specifications>=2025.9.1",
    "kornia>=0.7.1",
    "lark>=1.3.1",
    "librosa>=0.10.2.post1",
    "lpips>=0.1.4",
    "markupsafe==3.0.2",
    "matplotlib>=3.10.8",
    "matrix-nio>=0.25.2",
    "mido>=1.3.3",
    "mir-eval>=0.8.2",
    "more-itertools>=10.8.0",
    "mss>=10.1.0",
    "music21>=9.3.0",
    "natsort>=8.4.0",
    "ninja>=1.13.0",
    "nnaudio>=0.3.1",
    "numba>=0.64.0",
    "numpy==2.3.5",
    "nvidia-ml-py>=13.590.48",
    "olefile>=0.47",
    "ollama>=0.6.1",
    "omegaconf>=2.3.0",
    "onnxruntime>=1.24.2",
    "onnxruntime-gpu>=1.24.2",
    "open-clip-torch>=3.2.0",
    "openai-agents>=0.9.3",
    "opencv-python>=4.13.0.92",
    "orjson>=3.11.7",
    "pexpect>=4.9.0",
    "piexif>=1.1.3",
    "pillow==12.0.0",
    "platformdirs>=4.9.2",
    "polygraphy>=0.49.26",
    "pooch>=1.9.0",
    "pretty-midi>=0.2.10",
    "psutil>=7.2.2",
    "py-cpuinfo>=9.0.0",
    "pycocotools>=2.0.11",
    "pycparser>=3.0",
    "pycryptodome>=3.23.0",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "pydub>=0.25.1",
    "pygithub>=2.8.1",
    "pyjwt>=2.11.0",
    "pynacl>=1.6.2",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
    "pypdf2>=3.0.1",
    "python-osc>=1.9.3",
    "python-socks>=2.8.1",
    "pytorch-lightning>=2.6.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "qrcode>=8.2",
    "redis>=7.2.0",
    "referencing>=0.37.0",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "rotary-embedding-torch>=0.8.9",
    "rpds-py>=0.30.0",
    "ruff>=0.15.2",
    "runwayml>=4.6.1",
    "safehttpx>=0.1.7",
    "safetensors>=0.4.2",
    "sageattention",
    "sageattention3-blackwell",
    "sam-2",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "segment-anything>=1.0",
    "semantic-version>=2.10.0",
    "sentencepiece>=0.2.1",
    "setuptools==70.2.0",
    "shellingham>=1.5.4",
    "smmap>=5.0.2",
    "soundfile>=0.13.1",
    "soxr>=1.0.0",
    "spandrel>=0.4.1",
    "spotipy>=2.25.1",
    "sqlalchemy>=2.0.46",
    "srt>=3.5.3",
    "tensorflow[and-cuda]>=2.20.0",
    "tensorrt>=10.15.1.29",
    "tensorrt-cu13>=10.15.1.29",
    "tensorrt-cu13-bindings>=10.15.1.29",
    "tensorrt-cu13-libs>=10.15.1.29",
    "token-count>=0.2.1",
    "tokenizers>=0.13.3",
    "toml>=0.10.2",
    "tomlkit>=0.13.3",
    "torch>=2.9.0",
    "torchaudio>=2.10.0",
    "torchsde>=0.2.6",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=4.50.3",
    "typer>=0.24.1",
    "typer-slim>=0.24.0",
    "tzdata>=2025.3",
    "ultralytics>=8.4.14",
    "unpaddedbase64>=2.1.0",
    "watchdog>=6.0.0",
    "webcolors>=25.10.0",
    "yarl>=1.18.0",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "E",
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]

lint.ignore = ["E501", "E722", "E731", "E712", "E402", "E741"]

exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "wrong-import-order",  # Standard imports should be placed before third party imports
  "ungrouped-imports",
  "unnecessary-pass",
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]

[tool.uv]
no-build-isolation-package = ["sageattention", "sageattention3-blackwell"]

[tool.uv.workspace]
members = [
    "SageAttention/sageattention3_blackwell",
    "SageAttention",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

#[[tool.uv.index]]
#name = "cuda-wheels"
#url = "https://pozzettiandrea.github.io/cuda-wheels"
#explicit = true

[[tool.uv.index]]
name = "nvidia-pypi"
url = "https://pypi.nvidia.com"
explicit = true

[tool.uv.sources]
triton = [{ index = "pytorch-cuda", marker = "sys_platform == 'linux'" },]
torch = [{ index = "pytorch-cuda", marker = "sys_platform == 'linux' and platform_machine != 'aarch64'" },]
torchvision = [{ index = "pytorch-cuda", marker = "sys_platform == 'linux' and platform_machine != 'aarch64'" },]
torchaudio = [{ index = "pytorch-cuda", marker = "sys_platform == 'linux' and platform_machine != 'aarch64'" },]
tensorrt-libs = [{ index = "nvidia-pypi" },]
tensorrt-llm = [{ index = "nvidia-pypi" },]
tensorrt-bindings = [{ index = "nvidia-pypi" },]
tensorrt-lean = [{ index = "nvidia-pypi" },]
sam-2 = { git = "https://github.com/facebookresearch/sam2" }
# transformers = { git = "https://github.com/huggingface/transformers", rev = "v4.49.0-Gemma-3" }
sageattention = { workspace = true }
sageattention3-blackwell = { workspace = true }
argostranslate = { git = "https://github.com/argosopentech/argos-translate.git" }
# argostranslate = { git = "https://github.com/argosopentech/argos-translate.git" }
# cstr = { git = "https://github.com/WASasquatch/cstr.git" }
# ffmpy = { git = "https://github.com/WASasquatch/ffmpy.git" }
# img2texture = { git = "https://github.com/WASasquatch/img2texture.git" }
# sam-2 = { git = "https://github.com/facebookresearch/sam2" }
